Removed new catalog API reflection calls. Separated JDK9+/JDK8 code.